# attracts_msgs

./: CMakeLists.txt  package.xml
msg/: AttractsCommand.msg  GameDataInput.msg  GameDataRobot.msg
